fix: references example in notes doc

--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:wght@200;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link href="../../dist/reset.css" rel="stylesheet" />
-    <link href="../../dist/preons.css" rel="stylesheet" />
+    <link href="/dist/reset.css" rel="stylesheet" />
+    <link href="/dist/preons.css" rel="stylesheet" />
   </head>
 
   <body>
     <div class="pa3 ff-raleway fwn fs1 df wrap black">
       <div class="mb2 mr2">
-        <button class="bwa2 bca-transparent bg-hotpink white h7 pl6 pr6">
-          Sign up
-        </button>
+        Preons
       </div>
     </div>
   </body>
