fix: really basic home page

--- a/index.html
+++ b/index.html
@@ -10,15 +10,30 @@
       href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:wght@200;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link href="/dist/reset.css" rel="stylesheet" />
-    <link href="/dist/preons.css" rel="stylesheet" />
+    <link href="https://unpkg.com/preons/dist/reset.css" rel="stylesheet" />
+    <link href="https://unpkg.com/preons/dist/preons.css" rel="stylesheet" />
   </head>
 
-  <body>
-    <div class="pa3 ff-raleway fwn fs1 df wrap black">
-      <div class="mb2 mr2">
-        Preons
-      </div>
+  <body class="bg-grey">
+    <div class="pa3 ff-raleway fwn lh1 fs1 wrap black">
+      <h1 class="ff-dosis fs4 lh3 mb2">Preons</h1>
+      <ul class="">
+        <li>
+          <a href="./examples/components/avatars.html" class="tdx hotpink"
+            >Avatars</a
+          >
+        </li>
+        <li>
+          <a href="./examples/components/buttons.html" class="tdx hotpink"
+            >Buttons</a
+          >
+        </li>
+        <li>
+          <a href="./examples/components/cards.html" class="tdx hotpink"
+            >Cards</a
+          >
+        </li>
+      </ul>
     </div>
   </body>
 </html>
